Fix Android CI: exclude desktop tests, avoid Files.readString
Android :app unit-test compilation was pulling in Swing desktop tests
and Java 11 Files.readString/writeString APIs missing from android.jar
stubs. Exclude desktop/** from app test sources and use readAllBytes/
Files.write for save fixture tests.

Co-authored-by: AllenWest <awest813@users.noreply.github.com>