@@ -64,7 +64,7 @@ public class GoldenSaveFixtureTest {
         assertFalse("Fixture league must have teams", loaded.getTeamList().isEmpty());
         assertEquals(League.CURRENT_SAVE_VERSION, loaded.saveVer);
         assertTrue("Season year should be positive", loaded.getYear() > 0);
-        String body = Files.readString(fixtureCfB.toPath());
+        String body = new String(Files.readAllBytes(fixtureCfB.toPath()), java.nio.charset.StandardCharsets.UTF_8);
         assertTrue("Header should use SaveManager L: format", body.contains("L:"));
         assertTrue("Fixture should start with V: schema or legacy L: line",
                 body.startsWith(SaveSchema.VERSION_PREFIX) || body.startsWith("L:"));
